# CMake_HelloWorld

./: .gitignore  README.md
cmake0b-CMakeLists/: CMakeLists.txt
cmake0d-VisualCppWithoutVisualStudio/: CMakeLists.txt  main.cpp
cmake1a-AddingExecutable/: CMakeLists.txt  main.cpp
cmake1b-AddLibrary/: CMakeLists.txt  Main.cpp  hello.cpp
cmake1c-Subdirectories/: CMakeLists.txt
cmake1c-Subdirectories/hello_exe/: CMakeLists.txt  Main.cpp
cmake1c-Subdirectories/say_hello/: CMakeLists.txt
cmake1c-Subdirectories/say_hello/src/say_hello/: hello.cpp
cmake2a-Scripting/: CMakeLists.txt
cmake2b-ControlFlow/: CMakeLists.txt
cmake2c-FunctionsList/: CMakeLists.txt
cmake2d-AdvancedFunctions/CMRC/: CMakeLists.txt  CMakeRC.cmake
cmake2d-AdvancedFunctions/CMRC/tests/: CMakeLists.txt  CMakeLists1.txt  enoent.cpp  prefix.cpp  simple.cpp  whence.cpp  whence_prefix.cpp
cmake2e-Directories/: CMakeLists.txt  PrintVariables.cmake
cmake2e-Directories/hello-exe/: CMakeLists.txt
cmake2e-Directories/say-hello/: CMakeLists.txt
cmake2e-Directories/say-hello/src/say-hello/: hello.h
